[tool.poetry]
name = "b6.13"
version = "0.1.0"
description = ""
authors = ["azat715 <azat715@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.18"
SQLAlchemy = "^1.3.19"
bottle-sqlalchemy = "^0.4.3"
WTForms = "^2.3.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.6.3"
loguru = "^0.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
